[gd_scene format=3 uid="uid://coch68mv04a8e"]

[ext_resource type="Texture2D" uid="uid://bst42s0u350en" path="res://Art/ocean.png" id="1"]
[ext_resource type="Texture2D" uid="uid://b8wymgncerqsg" path="res://Art/nage2.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dr4q8dgkgx54h" path="res://Art/amoureuse_assise.png" id="3"]
[ext_resource type="Texture2D" uid="uid://ceqqfrfjt85na" path="res://Art/nage1.png" id="4"]
[ext_resource type="Texture2D" uid="uid://di67rkycn44fm" path="res://Art/bleu_trasparent.png" id="5"]
[ext_resource type="Texture2D" uid="uid://bgfg81nthy3cd" path="res://Art/ov_vide.png" id="6"]
[ext_resource type="Script" uid="uid://c42y3us2u1o2h" path="res://Scenes/Introduction.gd" id="9"]
[ext_resource type="Texture2D" uid="uid://c00o3m84u2irq" path="res://Art/p_inter.png" id="10"]
[ext_resource type="AudioStream" uid="uid://bw5jvxvcg8e07" path="res://Son/bulle.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://brryxswf0cyps" path="res://Son/bulleh.wav" id="12"]

[sub_resource type="SpriteFrames" id="2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}, {
"duration": 1.0,
"texture": ExtResource("2")
}],
"loop": true,
"name": &"default",
"speed": 0.8
}]

[node name="Introduction" type="Node2D" unique_id=1705783164]
script = ExtResource("9")

[node name="Ocean2" type="Sprite2D" parent="." unique_id=996601383]
texture = ExtResource("1")

[node name="AmoureuseIntro" type="Sprite2D" parent="." unique_id=271147591]
position = Vector2(1750, -880)
texture = ExtResource("3")

[node name="NageurIntro" type="AnimatedSprite2D" parent="." unique_id=80680413]
position = Vector2(1600, -850)
rotation = -0.600696
sprite_frames = SubResource("2")
autoplay = "default"
flip_h = true

[node name="Camera2D" type="Camera2D" parent="NageurIntro" unique_id=1810582918]
zoom = Vector2(0.5, 0.5)

[node name="CouvrirNageur" type="Sprite2D" parent="." unique_id=70283169]
position = Vector2(1590, -810)
scale = Vector2(20, 20)
texture = ExtResource("5")

[node name="BulleHomme" type="Sprite2D" parent="." unique_id=203216497]
visible = false
position = Vector2(1523, -984)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6")

[node name="DialogueHomme1" type="Sprite2D" parent="BulleHomme" unique_id=390322863]
position = Vector2(-146.667, -13.3333)
texture = ExtResource("10")

[node name="DialogueHomme2" type="Sprite2D" parent="BulleHomme" unique_id=1118878320]
position = Vector2(150, -20)
texture = ExtResource("10")

[node name="BulleFemme" type="Sprite2D" parent="." unique_id=1707572394]
visible = false
position = Vector2(1837, -1007)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6")

[node name="DialogueFemme1" type="Sprite2D" parent="BulleFemme" unique_id=1287665753]
position = Vector2(-146.667, 6.66699)
texture = ExtResource("10")

[node name="DialogueFemme2" type="Sprite2D" parent="BulleFemme" unique_id=625768921]
position = Vector2(150, 0.000488281)
texture = ExtResource("10")

[node name="SonBulleF" type="AudioStreamPlayer" parent="." unique_id=1924444539]
stream = ExtResource("11")

[node name="SonBulleH" type="AudioStreamPlayer" parent="." unique_id=1892236849]
stream = ExtResource("12")
